legend-pure-parser/examples/errors/08_compilation_errors.pure
// Copyright 2026 Goldman Sachs
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


###Pure

// ─── Compilation Errors ─────────────────────────────────────────────
// These elements have SEMANTIC errors — they parse successfully but
// fail during compilation. Use with `legend compile --show-source`.

// ERROR: References a type that doesn't exist
Class model::errors::BadReference
{
  name: String[1];
  address: model::nonexistent::Address[1];
}

// ERROR: Duplicate element name
Class model::errors::Duplicate
{
  x: Integer[1];
}
Class model::errors::Duplicate
{
  y: Integer[1];
}

// ERROR: Cyclic inheritance
Class model::errors::CycleA extends model::errors::CycleB
{
  a: String[1];
}
Class model::errors::CycleB extends model::errors::CycleA
{
  b: String[1];
}

// ERROR: Annotation references a profile that doesn't exist
Class <<nonexistent::profileName.stereo>> model::errors::BadAnnotation
{
  value: Integer[1];
}

// ─── Phase 4: Validation Errors ─────────────────────────────────────

// Helper profile for annotation tests
Profile model::errors::doc { stereotypes: [deprecated]; tags: [description]; }

// ERROR: Association must have exactly 2 properties
Class model::errors::Endpoint {}
Association model::errors::BadAssoc
{
  only: model::errors::Endpoint[1];
}

// ERROR: Super-type must be a Class
Enum model::errors::Color { Red, Blue }
Class model::errors::ExtendEnum extends model::errors::Color
{
}

// ERROR: Stereotype does not exist in the profile
Class <<model::errors::doc.nonexistent>> model::errors::BadStereo
{
}

// ERROR: Duplicate property names
Class model::errors::DuplicateProps
{
  name: String[1];
  name: Integer[1];
}
